--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -5,38 +5,9 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
-  # pull_request:
-  #   # Only following types are handled by the action, but one can default to all as well
 
 jobs:
   draft-release:
-    if: ${{ github.repository_owner == 'raven-actions' }}
     name: Draft Release
-    permissions:
-      contents: write
-      pull-requests: read
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get GitHub App Token
-        uses: wow-actions/use-app-token@v2
-        id: get-token
-        with:
-          app_id: ${{ secrets.ORG_BOT_APP_ID }}
-          private_key: ${{ secrets.ORG_BOT_PRIVATE_KEY }}
-          fallback: ${{ github.token }}
-
-      - name: Run Release Drafter
-        uses: release-drafter/release-drafter@v5
-        id: release-drafter
-        with:
-          prerelease: true
-        env:
-          GITHUB_TOKEN: ${{ steps.get-token.outputs.BOT_TOKEN }}
-
-      - name: Get Release URL
-        run: |
-          echo "${RELEASE_URL}"
-          echo "${RELEASE_URL}" >> $GITHUB_STEP_SUMMARY
-        env:
-          RELEASE_URL: ${{ steps.release-drafter.outputs.html_url }}
+    uses: raven-actions/.workflows/.github/workflows/__release-draft.yml@main
+    secrets: inherit
