--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -12,34 +12,10 @@ on:
         description: Tag name that the major tag will point to
         required: true
 
-env:
-  TAG_NAME: ${{ github.event.inputs.tag-name || github.event.release.tag_name }}
-
 jobs:
-  gh-release-update:
-    name: GitHub Release
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get GitHub App Token
-        uses: wow-actions/use-app-token@v2
-        id: get-token
-        with:
-          app_id: ${{ secrets.ORG_BOT_APP_ID }}
-          private_key: ${{ secrets.ORG_BOT_PRIVATE_KEY }}
-          fallback: ${{ github.token }}
-
-      - name: Update release to the latest
-        id: gh-release
-        uses: softprops/action-gh-release@v1
-        with:
-          prerelease: false
-          token: ${{ steps.get-token.outputs.BOT_TOKEN }}
-
-      - name: Update the major tag to include the ${{ env.TAG_NAME }} changes
-        id: update-major-tag
-        uses: actions/publish-action@v0.2.2
-        with:
-          source-tag: ${{ env.TAG_NAME }}
-          token: ${{ steps.get-token.outputs.BOT_TOKEN }}
+  publish-release:
+    name: Publish Release
+    uses: raven-actions/.workflows/.github/workflows/__release-publish.yml@main
+    secrets: inherit
+    with:
+      tag-name: ${{ github.event.inputs.tag-name || github.event.release.tag_name }}
